Found typo in page 8

--- a/BioMath.tex
+++ b/BioMath.tex
@@ -254,15 +254,15 @@ with two solutions $\lambda_1=-5$ and $\lambda_2=2$. We have already seen that t
 For the case $\lambda = 2$:
 
 \begin{equation}
-	\begin{pmatrix} -3 & -4\\ -3 & 0\end{pmatrix} \, \begin{pmatrix} v_x \\  v_y\end{pmatrix} = 0 \nonumber
+	\begin{pmatrix} -3 & -4\\ -3 & -4\end{pmatrix} \, \begin{pmatrix} v_x \\  v_y\end{pmatrix} = 0 \nonumber
 \end{equation}
 
 \begin{align*}
 	-3 \, v_x - 4 \, v_y =& 0 \nonumber\\
-	-3 \, v_y =& 0 \nonumber
+	-3 \, v_x - 4 \, v_y =& 0 \nonumber
 \end{align*}
 
-The second equation shows a very important property of eigenvectors, they are never unique. In this case, any value of $v_x$ will satisfy the second equation, because it is not in it, so we can assign whatever we want. Now it is easy to see that v=(4,-3) cancels out the first equation. If we had just chosen $v_x=1$, then our eigenvector would have been $\mathbf{v}=\left( 1,\frac{-3}{4} \right)$.
+Which is the same equation twice, so there is no unique solution. This shows a very important property of eigenvectors: they are never unique. It is easy to see that v=(4,-3) cancels out the equation. If we had just chosen $v_x=1$, then our eigenvector would have been $\mathbf{v}=\left( 1,\frac{-3}{4} \right)$.
 
 Now we can do the same for  $\lambda = -5$:
 
