Adding discrete systems

--- a/BioMath.tex
+++ b/BioMath.tex
@@ -34,7 +34,7 @@ x_{t} = 2^t \, x_0
 
 this is so simple that we hardly need any math!
 
-Now we move on to a slightly more complicated case. The radius of a tumor increases at a rate of  15 \% every hour, what is the duplication time of the tumor? The general form of equation \ref{geomgrowth_example} is
+Now we move on to a slightly more complicated case. The radius of a tumor increases at a rate of  15 \% every hour, what is the doubling time of the tumor? The general form of equation \ref{geomgrowth_example} is
 
 \begin{equation}
 \label{geomgrowth_general}
